--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode=development",
     "start": "webpack-dev-server --open --mode=development",
     "lint": "eslint src --ext .js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
     "eslint-webpack-plugin": "^4.0.1",
+    "gh-pages": "^6.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.5.0",
